assets/css/style.css
/* 2 errors found through validator - line 149 and 242 - simple typos which were rectified */
body {
    background-color: whitesmoke;
    font-family: Arial, Helvetica, sans-serif;
}

hr {
    opacity: 0.2;
}

header {
    height: 13rem;
}

.container {
    width: 100%;
}

/* navigation */
nav {
    width: 100%;
    height: 11rem;
}

#logo {
    float: left;
    width: 25%;
    height: 10rem;
}

nav a {
    float: right;
    margin: 3rem;
    text-align: right;
    text-transform: uppercase;
    text-decoration: none;
    color: slategray;
}

nav a:hover {
    border-bottom: 1px solid;
    color: rgb(92, 151, 247);
}

/* Welcome message */
#welcome {
    width: 50%;
    height: 7rem;
    margin-left: 25%;
    padding: 1.5rem;  
    text-align: center;
    text-transform: capitalize;
    font-size: xx-large;
    font-family: Arial, Helvetica, sans-serif;
    color: rgb(92, 151, 247, 0.7);
}

/* meet the therapists*/
#meet {
    height: 19rem;
    clear: both;
    padding: 2rem;
    margin: 6rem;
}

div a {
    text-decoration: none;
    color: rgb(92, 151, 247);
}

#therapist1 {
    width: 50%;
    float: left;
}

#therapist2 {
    width: 50%;
    float: right;
}

#therapist1 img {
    width: 19rem;
    height: 19rem;
    float: right;
    padding: 5px;
    border-radius: 50%;
    margin: 1.5rem;
    object-fit: cover;
}

#therapist2 img {
    width: 19rem;
    height: 19rem;
    float: left;
    padding: 5px;
    border-radius: 50%;
    margin: 1.5rem;
    object-fit: cover;
}

#therapist1 h3 p {
    text-align: center;
    width: 40%;
    float: right;
}

#therapist2 h3 p {
    text-align: center;
    width: 40%;
    float: left;
}

/* services */
.background-image {
    background: url(../images/Room.jpg) no-repeat center center fixed;
    background-size: cover;
    height: 62.5rem;
}

/* counselling */
#counselling {
    width: auto;
    height: 12rem;
    clear: both;
    margin: 6rem;
    display: inline-block;
    padding: 3rem;
    background-color: rgb(92, 151, 247, 0.6);
}

#counselling h2 {
    width: inherit;
    text-align: center;
    text-transform: uppercase;
    color: whitesmoke;
    margin: 1rem;
}

#counselling p {
    width: inherit;
    text-align: center;
    word-spacing: 1px;
    color: whitesmoke;
}

/* hypnotherapy */
#hypnotherapy {
    width: auto;
    height: 13rem;
    clear: both;
    margin: 6rem;
    padding: 3rem;
    background-color: rgb(92, 151, 247, 0.6);
}

#hypnotherapy h2 {
    width: inherit;
    text-align: center;
    text-transform: uppercase;
    color: whitesmoke;
}

#hypnotherapy p {
    width: inherit;
    text-align: center;
    word-spacing: 1px;
    color: whitesmoke;
}

/* contact */
#contact {
    text-align: center;
    text-transform: uppercase;
    font-size: x-large;
    color: rgb(92, 151, 247);
    height: 19rem;
    padding: 2rem;
    margin: 2rem;
}

#contact p {
    text-transform: uppercase;
}

/* find us */
#find {
    width: 30%;
    font-size: x-large;
    padding: 1.5rem;
}

/* iframe - google maps */
iframe.maps {
    width: 100%;
    height: 28rem;
    border: 0;
}

/* footer */
footer {
    width: 100%;
    height: 11rem;
}

footer h2 {
    color: rgb(92, 151, 247);
}

footer div {
    width: 30%;
    font-size: small;
    padding: 2rem;
    margin-left: 5rem;
}

/* for screens with max width of 1200px and down */
@media screen and (max-width: 1200px) {
    
    header {
        height: 15rem;
    }

    #welcome {
        font-size: larger;
    }

    #logo {
        width: 30%;
    }
        
    nav  {
        clear: left;
    }

    nav a {
        float: left;
        margin: 2.5rem;
    }
   
    #meet {
        width: auto;
        margin: auto;
        height: 55rem;
        padding: 7rem 0 7rem 0;
    }

    #therapist1, #therapist2 {
        height: 30rem;
        width: 70%;
        clear: both;
    }

    #therapist1 {
        float: right;
    }

    #therapist2 {
        float: left;
    }

    #counselling {
        width: auto;
        height: 12.5rem;
        clear: both;
        margin: 6rem;
        display: inline-block;
        padding: 3rem;
        background-color: rgb(92, 151, 247, 0.6);
    }
}

/* for screens with max width of 950px and down */
@media screen and (max-width: 950px) {
    header {
        height: 50rem;
    }

    #logo {
        width: 75%;
        height: auto;
        margin: 3rem;
    }

    nav {
        height: 22rem;
        margin: 1.5rem;
    }
    
    nav a {
        height: auto;
        clear: left;
        margin-top: 1rem;
        font-size: x-large;
    }

    #welcome {
        margin-top: 2rem;
        margin-bottom: 2rem;
    }

    #meet {
        height: 56rem;
        margin: 2rem;
    }

    #therapist1 {
        clear: left;
        float: right;
    }

    #therapist2 {
        clear: left;
        float: left;
    }
}

@media screen and (max-width: 780px) {
    header {
        height: 35rem;
    }

    nav {
        height: 13rem;
        width: 100%;
    }

    nav a {
        margin: 1rem;
        font-size: larger;
    }

    #welcome {
        width: 60%;
        height: 7rem;
        margin-left: 20%;
    }

    #meet {
        height: 50rem;
    }

    #therapist2, #therapist1 {
        float: left;
        margin: 0;
    }

    #therapist2 img {
        margin: 1rem;
        padding: 1rem;
        width: 15rem;
        height: 15rem;
        float: left;
    }

    #therapist1 img {
        margin: 1rem;
        padding: 1rem;
        width: 15rem;
        height: 15rem;
        float: left;
    }

    .background-image {
        width: 100%;
        height: 42rem;
    }

    #counselling {
        width: 100%;
        margin: 3rem 0 3rem 0;
        padding: 1rem 0 1rem 0;
    }

    #hypnotherapy {
        width: 100%;
        margin: 3rem 0 3rem 0;
        padding: 1rem 0 1rem 0;
    }
}

@media screen and (max-width: 420px) {
    #logo {
        width: 75%; 
    }

    header {
        height: 25rem;
    }

    #welcome {
        width: auto;
        height: 5rem;
        margin: auto;
    }

    #welcome h1 {
        font-size: larger;
    }

    #meet {
        height: 60rem;
        width: 100%;
        margin: 0;
        padding: 0;
    }

    #therapist2, #therapist1 {
        float: left;
        margin-left: 2rem;
    }

    #therapist2 img {
        margin: 1rem;
        padding: 1rem;
        width: 15rem;
        height: 15rem;
        float: left;
    }

    #therapist1 img {
        margin: 1rem;
        padding: 1rem;
        width: 15rem;
        height: 15rem;
        float: left;
    }
    
    .background-image {
        width: 100%;
        height: 58rem;
    }

    #counselling {
        height: 21rem;
    }

    #hypnotherapy {
        height: 22rem;
    }

    #contact {
        width: 100%;
        margin: 0;
        padding: 2rem 0 2rem 0;
    }

    #contact p {
        font-size: medium;
    }

    #find {
        width: 75%;
    }

    footer div {
        margin-left: 1rem;
        padding: 0;
    }
}

